--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -1007,6 +1007,81 @@
     <Content Include="Octagon\assets\vendor\morrisjs\morris.min.js" />
     <Content Include="Octagon\assets\vendor\raphael\raphael.js" />
     <Content Include="Octagon\assets\vendor\raphael\raphael.min.js" />
+    <Content Include="Octagon\i18n\datepicker-af.js" />
+    <Content Include="Octagon\i18n\datepicker-ar-DZ.js" />
+    <Content Include="Octagon\i18n\datepicker-ar.js" />
+    <Content Include="Octagon\i18n\datepicker-az.js" />
+    <Content Include="Octagon\i18n\datepicker-be.js" />
+    <Content Include="Octagon\i18n\datepicker-bg.js" />
+    <Content Include="Octagon\i18n\datepicker-bs.js" />
+    <Content Include="Octagon\i18n\datepicker-ca.js" />
+    <Content Include="Octagon\i18n\datepicker-cs.js" />
+    <Content Include="Octagon\i18n\datepicker-cy-GB.js" />
+    <Content Include="Octagon\i18n\datepicker-da.js" />
+    <Content Include="Octagon\i18n\datepicker-de.js" />
+    <Content Include="Octagon\i18n\datepicker-el.js" />
+    <Content Include="Octagon\i18n\datepicker-en-AU.js" />
+    <Content Include="Octagon\i18n\datepicker-en-GB.js" />
+    <Content Include="Octagon\i18n\datepicker-en-NZ.js" />
+    <Content Include="Octagon\i18n\datepicker-en-US.js" />
+    <Content Include="Octagon\i18n\datepicker-eo.js" />
+    <Content Include="Octagon\i18n\datepicker-es.js" />
+    <Content Include="Octagon\i18n\datepicker-et.js" />
+    <Content Include="Octagon\i18n\datepicker-eu.js" />
+    <Content Include="Octagon\i18n\datepicker-fa.js" />
+    <Content Include="Octagon\i18n\datepicker-fi.js" />
+    <Content Include="Octagon\i18n\datepicker-fo.js" />
+    <Content Include="Octagon\i18n\datepicker-fr-CA.js" />
+    <Content Include="Octagon\i18n\datepicker-fr-CH.js" />
+    <Content Include="Octagon\i18n\datepicker-fr.js" />
+    <Content Include="Octagon\i18n\datepicker-gl.js" />
+    <Content Include="Octagon\i18n\datepicker-he.js" />
+    <Content Include="Octagon\i18n\datepicker-hi.js" />
+    <Content Include="Octagon\i18n\datepicker-hr.js" />
+    <Content Include="Octagon\i18n\datepicker-hu.js" />
+    <Content Include="Octagon\i18n\datepicker-hy.js" />
+    <Content Include="Octagon\i18n\datepicker-id.js" />
+    <Content Include="Octagon\i18n\datepicker-is.js" />
+    <Content Include="Octagon\i18n\datepicker-it-CH.js" />
+    <Content Include="Octagon\i18n\datepicker-it.js" />
+    <Content Include="Octagon\i18n\datepicker-ja.js" />
+    <Content Include="Octagon\i18n\datepicker-ka.js" />
+    <Content Include="Octagon\i18n\datepicker-kk.js" />
+    <Content Include="Octagon\i18n\datepicker-km.js" />
+    <Content Include="Octagon\i18n\datepicker-ko.js" />
+    <Content Include="Octagon\i18n\datepicker-ky.js" />
+    <Content Include="Octagon\i18n\datepicker-lb.js" />
+    <Content Include="Octagon\i18n\datepicker-lt.js" />
+    <Content Include="Octagon\i18n\datepicker-lv.js" />
+    <Content Include="Octagon\i18n\datepicker-mk.js" />
+    <Content Include="Octagon\i18n\datepicker-ml.js" />
+    <Content Include="Octagon\i18n\datepicker-ms.js" />
+    <Content Include="Octagon\i18n\datepicker-nb.js" />
+    <Content Include="Octagon\i18n\datepicker-nl-BE.js" />
+    <Content Include="Octagon\i18n\datepicker-nl.js" />
+    <Content Include="Octagon\i18n\datepicker-nn.js" />
+    <Content Include="Octagon\i18n\datepicker-no.js" />
+    <Content Include="Octagon\i18n\datepicker-pl.js" />
+    <Content Include="Octagon\i18n\datepicker-pt-BR.js" />
+    <Content Include="Octagon\i18n\datepicker-pt.js" />
+    <Content Include="Octagon\i18n\datepicker-rm.js" />
+    <Content Include="Octagon\i18n\datepicker-ro.js" />
+    <Content Include="Octagon\i18n\datepicker-ru.js" />
+    <Content Include="Octagon\i18n\datepicker-sk.js" />
+    <Content Include="Octagon\i18n\datepicker-sl.js" />
+    <Content Include="Octagon\i18n\datepicker-sq.js" />
+    <Content Include="Octagon\i18n\datepicker-sr-SR.js" />
+    <Content Include="Octagon\i18n\datepicker-sr.js" />
+    <Content Include="Octagon\i18n\datepicker-sv.js" />
+    <Content Include="Octagon\i18n\datepicker-ta.js" />
+    <Content Include="Octagon\i18n\datepicker-th.js" />
+    <Content Include="Octagon\i18n\datepicker-tj.js" />
+    <Content Include="Octagon\i18n\datepicker-tr.js" />
+    <Content Include="Octagon\i18n\datepicker-uk.js" />
+    <Content Include="Octagon\i18n\datepicker-vi.js" />
+    <Content Include="Octagon\i18n\datepicker-zh-CN.js" />
+    <Content Include="Octagon\i18n\datepicker-zh-HK.js" />
+    <Content Include="Octagon\i18n\datepicker-zh-TW.js" />
     <Content Include="Scripts\addgroup.js" />
     <Content Include="Scripts\autocomplete.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -1216,6 +1291,7 @@
     <Content Include="Content\quicksearch\README.md" />
     <Content Include="ClassDiagram1.cd" />
     <Content Include="Views\Shared\ErrorWithLayout.cshtml" />
+    <Content Include="Octagon\i18n\datepicker-es-AR.json" />
     <None Include="Properties\PublishProfiles\OctagonPlatform2 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\OctagonPlatform20171221062019 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\OctagonPlatform20180130105037 - Web Deploy.pubxml" />
